--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>PolyRace - AI-Powered Crypto Prediction Racing</title>
+    <meta
+      name="description"
+      content="Next-gen crypto prediction game combining Polymarket data, AI analysis, and blockchain racing"
+    />
+    <meta name="author" content="PolyRace Team" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta
+      property="og:title"
+      content="PolyRace - AI-Powered Crypto Prediction Racing"
+    />
+    <meta
+      property="og:description"
+      content="Next-gen crypto prediction game combining Polymarket data, AI analysis, and blockchain racing"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@PolyRace" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
